# Orion

./: .gitignore  Cargo.toml  License.md  Package.swift  README.md  build.zig  go.mod  main.go  orion
Orion/Sources/: ContentView.swift  main.swift
OrionKit/: Package.swift
OrionKit/Sources/COrionKit/: module.modulemap
OrionKit/Sources/COrionKit/include/: bridge.h
OrionKit/Sources/OrionKit/: FileSearcher.swift  OrionKit.swift  bridge.swift
OrionKit/Sources/OrionKit/include/: bridge.h
OrionKit/Sources/Utilities/crypto/: Hash.swift
OrionLinux/: CMakeLists.txt
OrionLinux/scripts/: build.sh  run.sh
OrionLinux/src/: main.cpp  window.cpp  window.hpp
OrionMac/: Package.swift
OrionMac/Sources/: ContentView.swift
OrionWindows/: CMakeLists.txt  CMakePresets.json
OrionWindows/include/: MainWindow.hpp
OrionWindows/scripts/: build.cmd
OrionWindows/src/: MainWindow.cpp  main.cpp
Tests/OrionKitTests/: OrionKitTests.swift
docs/: WindowsDev.md
src/: main.rs  main.zig  orion.go  search.zig  size_scanner.zig  thread_pool.zig  utils.zig
src/assets/: ascii_logo.txt
test_dir/: another_file.txt
tests/: tests.rs
